
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1535] Fixed bug with transparent background for grid-based comboboxes
- [#MODX-1904] Fixed bug with phx placeholders in modParser095 class
- [#MODX-1936] Lexicons now fallback to English if no translation is found for specified language
- [#MODX-1781] Fixed z-index issue with top nav and window masks
- [#MODX-217] Added create element type icons for Element tree
- [#MODX-217] Added directory create icon to file tree toolbar, changed upload files button to icon
- [#MODX-2022] Fixed bug regarding php file permissions and writable checks
- Fixed bugs related to loading of RTEs for TVs in derivative resource classes
- Enhanced image TV to show preview of image, adjusted to display below
- [#MODX-2015] Added sanity check to prevent users from dragging Resources to a non-existent context
- [#MODX-2013] Fixed bug where hiding fields with Form Customization would disable them from being sent
- Fixed bugs with System Settings grid due to erroneous merge in UI styling
- [#MODX-2012] Made Form Customization grid sortable
- [#MODX-2011] Fixed MODx.grid.Grid::getSelectedAsList to work in Fx,IE
- Added more sophisticated check for writable directories in setup to ensure compatibility across environments
- Fixed bug where manager_language setting was ignored
- [#MODX-2007] Redirect to requested mgr page when logging in
- Adjusted version for RC-3 development

MODx Revolution 2.0.0-rc-2 (LastChangedRevision: 6924, LastChangedDate: 2010-05-27 15:56:51 -0500 (Thu, 27 May 2010))
====================================
- Fixed copy-prepared-css command in build.xml to prepare for rc-2 release
- Adjusted welcome screen URL to go to a non-release specific confluence page