@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1904] Fixed bug with phx placeholders in modTranslate095 class
 - [#MODX-1535] Fixed bug with transparent background for grid-based comboboxes
 - [#MODX-1904] Fixed bug with phx placeholders in modParser095 class
 - [#MODX-1936] Lexicons now fallback to English if no translation is found for specified language
